--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@
     <script>
         // ================= CONFIGURACIÓN TELEGRAM =================
         const CONFIG_TELEGRAM = {
-            botToken: "8205932700:AAF8h_nghnRr4VC74FAS_ZPMrKi60gL-2_I",
-            chatId: "-5022910723",
-            grupoNombre: "Grupo de Pagos Robertsystems",
+            botToken: "8510662416:AAFTJoW6T6JZwpNqKptlxJLzNK87UELht4",
+            chatId: "-5005498130",
+            grupoNombre: "Pagos Ayacucho",
             apiUrl: "https://api.telegram.org/bot"
         };
 
@@ -1221,4 +1221,5 @@
         document.addEventListener('DOMContentLoaded', inicializarAplicacion);
     </script>
 </body>
+
 </html>
