--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         // ================= CONFIGURACIÓN =================
         const CONFIG = {
             // URL de tu API en AWS (DIRECTA - sin proxy)
-            apiUrl: 'https://tight-rice-7142.thecrow859.workers.dev/',
+            apiUrl: 'https://tight-rice-7142.thecrow859.workers.dev/api',
             
             // Telegram
             telegram: {
@@ -1644,3 +1644,4 @@
     </script>
 </body>
 </html>
+
